--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
         <title>Martin Park</title>
     </head>
     <body>
-        <h1>Martin Park</h1>
-        <p>Parsons the New School for Design Class of 2019
-        What is life?</p> 
-    </body>
+        <h1>Martin's Home Page</h1>
+        <p1>Welcome, you have reached my home page.</p1>
+        <ul>
+            <li>
+                <a href="dowhat/index.html">Do what results</a>
+            </li>
+            <li>
+                <a href="interview/index.html">Interview</a>
+            </li>
+            <li>
+                <a href="css-demo/demo.html">CSS Demo</a>
+            </li>
+        </ul>
+       </body>
 </html>
+
+
