--- a/interview/q2.html
+++ b/interview/q2.html
@@ -1,8 +1,13 @@
 <html>
 	<head>
-		<title>Hello, world.</title>
+		<title>Question Two </title>
 	</head>
 	<body>
-		Hello, world.
+		<h1>
+		II. What is your favorite color and why?
+		</h1>
+		<p> My favorite colors are olive/army/forest green really most things in the green family. Green and I are in an open relationship. I have found myself drawn to many other colors over the years, but I will always come back to green.
+</p>
+<h2><a href="index.html">Back</a></h2>
 	</body>
 </html>
