--- a/interview/q6.html
+++ b/interview/q6.html
@@ -1,8 +1,13 @@
 <html>
 	<head>
-		<title>Hello, world.</title>
+		<title>Question Six </title>
 	</head>
 	<body>
-		Hello, world.
+		<h1>
+		VI. What genre of music do you enjoy listen to? Since when and why did you start listening to it??
+		</h1>
+		<p> I kind of listen to everything. Tribe Called Quest, Chance the Rapper, Jamila Woods, Save Money/The Social Experiment/Kids These Days, Aesop Rock, Weezer, Beck, The Animals, FUGEES, The Flaming Lips, Velvet Underground, Doors, Portishead...Like I really don’t think you want me to go on
+</p>
+<h2><a href="index.html">Back</a></h2>
 	</body>
 </html>
