--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <html>
     <head>
         <title>Martin Park</title>
+        <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1>Martin's Home Page</h1>
-        <p1>Welcome, you have reached my home page.</p1>
+        <h1>Martin Park</h1>
+        <p1>Communication Design Major
+        <br>Parsons Class of 2019</p1>
+        <br>
+        <br>
+        <img src= "scan1.jpg" style="width:304px;height:400px;">
+        <img src= "scan2.jpg" style="width:304px;height:400px;">
+        <img src= "scan3.jpg" style="width:304px;height:400px;">
+        <br>
+        <br>
+        <br>
         <ul>
             <li>
                 <a href="dowhat/index.html">Do what results</a>
