--- a/interview/index.html
+++ b/interview/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Interview Assignment</title>
+		<link href="styles.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<hr>
@@ -9,22 +10,36 @@
 		<hr>
 		<hr>
 		<ul>
-            <li>
-                <a href="interview/q1.html">Interview Q1</a>
-            </li>
-            <li>
-                <a href="interview/q2.html">Interview Q2</a>
-            </li>
-            <li>
-                <a href="interview/q3.html">Interview Q3</a>
-            </li><a href="interview/q4.html">Interview Q4</a>
-            </li>
-            <li>
-                <a href="interview/q5.html">Interview Q5</a>
-            </li>
-            <li>
-                <a href="interview/q6.html">Interview Q6</a>
-            </li>
+		    <li>
+		        <a href="q1.html">Why Parsons?</a>
+		    </li>
+		    <li>
+		    	<a href="q2.html">Favorite color?</a>
+		    </li>
+		    <li>
+		    	<a href="q3.html">What have you been through?</a>
+		    </li>
+		    <li>
+		    	<a href="q4.html">NYC?</a>
+		    </li>
+		    <li>
+		    	<a href="q5.html">Animal?</a>
+		    </li>
+		    <li>
+		    	<a href="q6.html">Music?</a>
+		    </li>
+		    <li>
+		    	<a href="q7.html">Emails?</a>
+		    </li>
+		    <li>
+		    	<a href="q8.html">Highschool?</a>
+		    </li>
+		    <li>
+		    	<a href="q9.html">90's Music?</a>
+		    </li>
+		    <li>
+		    	<a href="q10.html">You after time?</a>
+		    </li>
         </ul>
 		<h2><a href="../index.html">Go home...</a></h2>
 	</body>
