--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <html>
     <head>
-        <title>Martin Park</title>
+       <title>Martin Park</title>
         <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1>Martin Park</h1>
-        <p1>Communication Design Major
-        <br>Parsons Class of 2019</p1>
+        <h1><center>Martin Park</h1>
+        <p1><center>Communication Design Major
+        <br>Parsons Class of 2019</p1></center>
         <br>
         <br>
-        <img src= "scan1.jpg" style="width:304px;height:400px;">
+        <center><img src= "scan1.jpg" style="width:304px;height:400px;">
         <img src= "scan2.jpg" style="width:304px;height:400px;">
         <img src= "scan3.jpg" style="width:304px;height:400px;">
+        <img src= "scan4.jpg" style="width:304px;height:400px;">
         <br>
         <br>
         <br>
