--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
+        <audio autoplay src="intro.mp3"></audio>
         <h1><center>Martin Park</h1>
         <p1><center>Communication Design Major
         <br>Parsons Class of 2019</p1></center>
