--- a/interview/index.html
+++ b/interview/index.html
@@ -4,14 +4,17 @@
 		<link href="styles.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
+		<audio autoplay src="goodday.mp3"></audio>
 		<hr>
 		<hr>
 		<center><h1>Zarrin Karimi</h1>
 		<hr>
 		<hr>
+		<p1>Audio: Good Day - Nappy Roots </p1>
 		 <center><img src= "zarinart.jpg" style="width:400px;height:550px;">
 		 <br>
-		 <p1>About Zarrin...</p1>
+		 <p2>About Zarrin...</p2>
+		 <br>
 		 <hr>
 		<ul>
 		    <li>
