--- a/interview/q1.html
+++ b/interview/q1.html
@@ -7,6 +7,7 @@
 		I. Where are you from and how did you decide to come to Parsons?
 		</h1>
 		<p> I'm from Chicago- I decided to come to Parsons for the BA/BFA program. </p>
-	<h2><a href="index.html">Back</a></h2>
+	<h2><a href="q2.html">Favorite Color?</a></h2>
+	<h3><a href="index.html">Back</a></h3>
 	</body>
 </html>
