--- a/interview/q2.html
+++ b/interview/q2.html
@@ -8,6 +8,7 @@
 		</h1>
 		<p> My favorite colors are olive/army/forest green really most things in the green family. Green and I are in an open relationship. I have found myself drawn to many other colors over the years, but I will always come back to green.
 </p>
-<h2><a href="index.html">Back</a></h2>
+<h2><a href="q3.html">What have you been through?</a></h2>
+<h3><a href="index.html">Back</a></h3>
 	</body>
 </html>
