--- a/interview/q3.html
+++ b/interview/q3.html
@@ -8,6 +8,7 @@
 		</h1>
 		<p> Nothing extraordinary really happens to me.
 </p>
-<h2><a href="index.html">Back</a></h2>
+<h2><a href="q4.html">NYC?</a></h2>
+<h3><a href="index.html">Back</a></h3>
 	</body>
 </html>
