--- a/interview/q4.html
+++ b/interview/q4.html
@@ -8,6 +8,7 @@
 		</h1>
 		<p>Hanging out at night on my roof and watching the trains pass= priceless.
 </p>
-<h2><a href="index.html">Back</a></h2>
+<h2><a href="q5.html">Animal?</a></h2>
+<h3><a href="index.html">Back</a></h3>
 	</body>
 </html>
