--- a/interview/q5.html
+++ b/interview/q5.html
@@ -8,6 +8,7 @@
 		</h1>
 		<p> If I were an animal I would be probably be a pigeon. Not by choice- just because that is what I am.
 </p>
-<h2><a href="index.html">Back</a></h2>
+<h2><a href="q6.html">Music?</a></h2>
+<h3><a href="index.html">Back</a></h3>
 	</body>
 </html>
