--- a/interview/q6.html
+++ b/interview/q6.html
@@ -8,6 +8,7 @@
 		</h1>
 		<p> I kind of listen to everything. Tribe Called Quest, Chance the Rapper, Jamila Woods, Save Money/The Social Experiment/Kids These Days, Aesop Rock, Weezer, Beck, The Animals, FUGEES, The Flaming Lips, Velvet Underground, Doors, Portishead...Like I really don’t think you want me to go on
 </p>
-<h2><a href="index.html">Back</a></h2>
+<h2><a href="q7.html">2000 emails?</a></h2>
+<h3><a href="index.html">Back</a></h3>
 	</body>
 </html>
