--- a/interview/q7.html
+++ b/interview/q7.html
@@ -9,5 +9,6 @@
 		<p> I don't need that scenario set up for me, I currently have 2,949 emails- pls help.
 </p>
 <h2><a href="index.html">Back</a></h2>
+<h3><a href="q8.html">Highschool?</a></h3>
 	</body>
 </html>
