--- a/interview/q8.html
+++ b/interview/q8.html
@@ -8,6 +8,7 @@
 		</h1>
 		<p> I was pretty lost in high school- There were just so many obstacles and junk in my life that was kind of clouding me up. Now I can look back with a different perspective and I have definitely evolved. 
 </p>
-<h2><a href="index.html">Back</a></h2>
+<h2><a href="q9.html">90's Jam?</a></h2>
+<h3><a href="index.html">Back</a></h3>
 	</body>
 </html>
