--- a/interview/q9.html
+++ b/interview/q9.html
@@ -8,6 +8,7 @@
 		</h1>
 		<p> Good Day- Nappy Roots. Never grows old.
 </p>
-<h2><a href="index.html">Back</a></h2>
+<h2><a href="q10.html">You after time?</a></h2>
+<h3><a href="index.html">Back</a></h3>
 	</body>
 </html>
