Adding index file

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <li>
                 <a href="css-demo/demo.html">CSS Demo</a>
             </li>
+            <li>
+                <a href="cssadvanced/assets/mycss.html">More CSS</a>
+            </li>
         </ul>
        </body>
 </html>
