--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="css-demo/demo.html">CSS Demo</a>
             </li>
             <li>
-                <a href="cssadvanced/assets/mycss.html">More CSS</a>
+                <a href="cssadvanced/mycss.html">More CSS</a>
             </li>
         </ul>
        </body>
