--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <li>
                 <a href="cssadvanced/mycss.html">More CSS</a>
             </li>
+            <li>
+                <a href="compositions/index.html">Compositions</a>
+            </li>
         </ul>
        </body>
 </html>
