--- a/compositions/c1.html
+++ b/compositions/c1.html
@@ -32,6 +32,11 @@
 	   		   	   		   <div class="circle22"></div>
 	   		   <div class="circle23"></div>
 	   		   <div class="circle24"></div>
+	   		   	   		   <div class="circle25"></div>
+	   		   <div class="circle26"></div>
+	   		   <div class="circle27"></div>
+	   		   <div class="circle28"></div>
+
 
 
 
