--- a/compositions/index.html
+++ b/compositions/index.html
@@ -14,6 +14,9 @@
 		<li>
 			<a href="c1.html">Composition #1</a>
 		</li>
+		<li>
+			<a href="c2.html">Composition #2</a>
+		</li>
 		<br>
 		<br>
 	<a href="../index.html">Go home</a>
