--- a/cssadvanced/mycss.html
+++ b/cssadvanced/mycss.html
@@ -4,11 +4,30 @@
 		<link href="styles.css" rel="stylesheet" type="text/css">
 		</head>
 	<body>
-		<div class="container"></div>
-		Some content between columns
-		<div class="column">Some content...</div>
+		<div class="overflow">
+		A grid is a way of organizing information on a page or screen. It’s a kind of skeleton for the musculature and skin of your content and design, a modular framework that can help to define relationships and create alignments between the elements in your layout. Here are comments by three graphic designers on grids.	
+		</div>
 		<div class="circle"></div>
 		<p> </p>
-	<a href="../index.html">Go home</a>
+		<br>
+		<br>
+		<a href="http://newschool.edu">Go to the New School...</a>
+		<br>
+		<br>
+		<div class="container">
+			 <div class="child"></div>
+			 <div class="mycircle"></div> 
+			 <div class="triangle"></div>
+			 <div class="box"></div>
+			 <div class="box1"></div>
+			 <div class="box2"></div>
+			 <div class="box3"></div>
+			 <div class="box4"></div>
+		<br>
+		<br>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<a><a class="button" href="http://newschool.edu></a>
+		<br>
+		<br>
 	</body>
 </html>
