--- a/compositions/index.html
+++ b/compositions/index.html
@@ -17,6 +17,9 @@
 		<li>
 			<a href="c2.html">Composition #2</a>
 		</li>
+		<li>
+			<a href="c3.html">Composition #3</a>
+		</li>
 		<br>
 		<br>
 	<a href="../index.html">Go home</a>
