--- a/compositions/c3.html
+++ b/compositions/c3.html
@@ -9,6 +9,10 @@
             <div class="container2">ROTATES</div>
             <div class="container3">TIME</div>
             <div class="container4">ROTATES</div>
+            <div class="rec1">XII</div>
+            <div class="rec2">III</div>
+            <div class="rec3">VI</div>
+            <div class="rec4">IX</div>
 			 <div class="circle3"></div>
 			 <div class="mycircle"></div> 
 		    <div class="circle13"></div>
