--- a/dowhat/index.html
+++ b/dowhat/index.html
@@ -15,6 +15,15 @@
 		draw another zig-zag lines through the dots starting from the first dot and stretching downwards. Then, color in the triangles created between 
 		<br>
 		intersections of the two zig-zag lines.
+		<br>
+		<br>
+		Results:
+		<br>
+		My partner followed my instructions very well and ended up with the same results as mine. I wanted to see my partner follow my instructions
+		<br>
+		and end up with the exact results I had; therefore I made my instructions very straight forward and clear. I was satisfied with the outcome of this 
+		<br>
+		excersise.
 <h3><a href="../index.html">Go home</a></h3>
 
 	</body>
