--- a/cssadvanced2/mycss.1.html
+++ b/cssadvanced2/mycss.1.html
@@ -6,9 +6,11 @@
 	<body>
 		<div class ="button">YO</div>
 		<br><br><br>
-		<div class="clock">
-			<div class="seconds"></div>
-		</div>
-	
+		<div class="full"></div>
+		<div class="column">Hello</div>
+		<div class="column">World</div>
+		<div class="column">Hello</div>
+		<div class="column">World</div>
+
 	</body>
 </html>
