--- a/compositions/index.html
+++ b/compositions/index.html
@@ -20,6 +20,9 @@
 		<li>
 			<a href="c3.html">Composition #3</a>
 		</li>
+		<li>
+			<a href="c4.html">Composition #4</a>
+		</li>
 		<br>
 		<br>
 	<a href="../index.html">Go home</a>
