--- a/javascript/yo.html
+++ b/javascript/yo.html
@@ -1,7 +1,16 @@
 <html>
 	<head>
 		<title>Hello, world.</title></head>
+		<link href="styles.1.css" rel="stylesheet" type="text/css">
+	</head>
 	<body>
+		
+		You clicked the button </mark>
+		
+		<div class="button">GO</div>
+		
+		<script src="jquery.js" type="text/javascript"></script>
 		<script src="whatever.js" type="text/javascript"></script>
+		
 	</body>
 </html>
