--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <li>
                 <a href="compositions/index.html">Compositions</a>
             </li>
+             <li>
+                <a href="javacompositions/composition1/index.html">JavascriptCompositions</a>
+            </li>
         </ul>
        </body>
 </html>
