--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="compositions/index.html">Compositions</a>
             </li>
              <li>
-                <a href="javacompositions/composition1/index.html">JavascriptCompositions</a>
+                <a href="javacompositions/index.html">JavascriptCompositions</a>
             </li>
         </ul>
        </body>
