--- a/javacompositions/composition1/c1index.html
+++ b/javacompositions/composition1/c1index.html
@@ -18,7 +18,9 @@
 
         <div class="wrapper">
              <div class="circle"></div>
-        <
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+        <div class="circle3"></div>
 
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
