--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
              <li>
                 <a href="javacompositions/index.html">JavascriptCompositions</a>
             </li>
+            <li>
+                <a href="final/index.html">Final Catalog</a>
+            </li>
         </ul>
        </body>
 </html>
