--- a/final/index.html
+++ b/final/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Hello, world.</title>
+		<title>Eye Catalog</title>
 		<link href="styles.css" rel="stylesheet" type="text/css">
 		</head>
 	<body>
